# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  Makefile  docker-compose.yml  justfile  pyproject.toml
.cursor/rules/: fastapi.mdc  python-fastapi.mdc  uv.mdc
app/: config.py  endpoint.py  main.py  models.py  router.py  utils.py
app/endpoints/: example.py  health.py
tests/: test_main.py
tests/e2e/: test_e2e_health.py
tests/unit/: test_utils.py
