[project]
name = "example-name"
version = "0.0.0"
description = "Example description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.4",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
]


[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.9", "ty>=0.0.1a6"]


[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "SIM", "B", "UP", "FAST"]
ignore = ["E501"]


[tool.ty]
src.root = "./app"
rules.unresolved-import = "ignore"
