[project]
name = "example-name"
version = "0.0.0"
description = "Example description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.116.0",
    "uvicorn[standard]~=0.35.0",
    "pydantic~=2.11.7",
    "pydantic-settings~=2.10.1",
]

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "requests~=2.32.4",
    "ruff~=0.12.2",
    "ty~=0.0.1a14",
    "fastapi[standard]~=0.116.0",
    "pytest-asyncio>=1.1.0",
]


[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "SIM", "B", "UP", "FAST"]
ignore = ["E501"]


[tool.ty]
environment.root = ["./app"]
rules.unresolved-import = "ignore"
